--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: Local Land Charges programme
 description: >- # this means to ignore newlines until "baseurl:"
   Documentation repositroy for the Local Land Charges Programe
-baseurl: "/local-land-charge" # the subpath of your site, e.g. /blog
-url: "https://landregistry.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://louis331.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: govuk-jekyll-theme
