--- a/.github/workflows/create_release_notice.yml
+++ b/.github/workflows/create_release_notice.yml
@@ -13,7 +13,7 @@ jobs:
           python-version: '3.10'
       - name: Create release notice JSON
         run: |
-          create_output_file.py > index.json
+          python create_output_file.py > index.json
       - name: Commit json to repo
         run: |
           git config --global user.name 'ChangeMe'
