--- a/.github/workflows/create_release_notice.yml
+++ b/.github/workflows/create_release_notice.yml
@@ -13,8 +13,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - run: ls
       - name: Create release notice JSON
-        run: python create_output_file.py
+        run: python create_output_file.py > index.json
       - name: Commit json to repo
         run: |
           git config --global user.name 'ChangeMe'
