--- a/.github/workflows/create_release_notice.yml
+++ b/.github/workflows/create_release_notice.yml
@@ -15,7 +15,12 @@ jobs:
           python-version: '3.10'
       - name: Create release notice JSON
         run: python create_output_file.py
+      - name: Check if there are any changes
+        id: verify_diff
+        run: |
+          git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
       - name: Commit json to repo
+        if: steps.verify_diff.outputs.changed == 'true'
         run: |
           git config --global user.email "${{github.event.publisher.email}}"
           git config --global user.name "${{github.actor}}"
